# artist-connection-grpc-auth

./: Cargo.toml  Dockerfile  Makefile  build.rs  docker-compose.test.yaml
.github/workflows/: ci.yml
config/: default.toml  test.toml
proto/: auth.proto
src/: config.rs  lib.rs  main.rs
src/auth/: domain.rs  mod.rs  ports.rs
src/auth/adapters/: auth0.rs  grpc.rs  keycloak.rs  mod.rs
tests/: auth_test.rs
tests/common/: mock_auth_server.rs  mod.rs
tests/integration/: grpc_server_test.rs
tests/integration_tests/: grpc_server_test.rs  mod.rs
tests/unit/: auth0_client_test.rs  grpc_test.rs  mod.rs
tests/unit_tests/: auth0_client_test.rs  grpc_test.rs
