[package]
name = "grpc-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
# 非起動ランタイム
tokio = {version = "1.43.0", features = ["full"]}
# gRPC
tonic = "0.12.3"
prost = "0.13.4"

# 汎用
thiserror = "2.0.11"
serde = "1.0.217"
async-trait = "0.1.85"
# ロギング
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
# 認証
oauth2= {version = "4.4.2", features = ["reqwest", "rustls-tls"]}
# 設定
config = "0.15.5"
time = "0.3.37"

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
tokio-test = "0.4.4"
mockall = "0.13.1"

[lib]
name = "grpc_auth"
path = "src/lib.rs"

[[bin]]
name = "grpc-auth"
path = "src/main.rs"